# opengauss_nvmdb_pzs

nvmdb/: CMakeLists.txt  Makefile  help.md
nvmdb/core/: CMakeLists.txt  Makefile
nvmdb/core/GaussDBKernel-nvmdb/: Makefile
nvmdb/core/GaussDBKernel-nvmdb/benchmarks/: CMakeLists.txt  index.cpp  numaheap.cpp  smallbank.cpp  testtpcc.cpp  tpcc.h
nvmdb/core/GaussDBKernel-nvmdb/dbcore/: nvm_dbcore.cpp  nvm_page_dlist.cpp  nvm_table.cpp  nvm_transaction.cpp  nvmdb_thread.cpp
nvmdb/core/GaussDBKernel-nvmdb/dbcore/codec/: nvm_codec.cpp
nvmdb/core/GaussDBKernel-nvmdb/dbcore/heap/: README.txt  nvm_access.cpp  nvm_global_bitmap.cpp  nvm_heap_space.cpp  nvm_heap_undo.cpp  nvm_rowid_map.cpp  nvm_tuple.cpp  nvm_vecstore.cpp
nvmdb/core/GaussDBKernel-nvmdb/dbcore/index/: nvm_index.cpp  nvm_index_access.cpp  nvm_index_undo.cpp  nvm_pactree_instance.cpp
nvmdb/core/GaussDBKernel-nvmdb/dbcore/table_space/: nvm_logic_file.cpp  nvm_table_space.cpp
nvmdb/core/GaussDBKernel-nvmdb/dbcore/undo/: README.txt  nvm_undo_api.cpp  nvm_undo_context.cpp  nvm_undo_record.cpp  nvm_undo_rollback.cpp  nvm_undo_segment.cpp
nvmdb/core/GaussDBKernel-nvmdb/include/: nvm_block.h  nvm_cfg.h  nvm_dbcore.h  nvm_page_dlist.h  nvm_table.h  nvm_transaction.h  nvm_types.h  nvm_utils.h  nvmdb_thread.h
nvmdb/core/GaussDBKernel-nvmdb/include/codec/: nvm_codec.h
nvmdb/core/GaussDBKernel-nvmdb/include/heap/: nvm_access.h  nvm_global_bitmap.h  nvm_heap_space.h  nvm_heap_undo.h  nvm_rowid_cache.h  nvm_rowid_map.h  nvm_rowid_mgr.h  nvm_tuple.h  nvm_vecrange.h  nvm_vecstore.h
nvmdb/core/GaussDBKernel-nvmdb/include/index/: nvm_index.h  nvm_index_access.h  nvm_index_iter.h  nvm_index_tuple.h  nvm_index_undo.h
nvmdb/core/GaussDBKernel-nvmdb/include/table_space/: nvm_logic_file.h  nvm_table_space.h
nvmdb/core/GaussDBKernel-nvmdb/include/undo/: nvm_undo_api.h  nvm_undo_context.h  nvm_undo_internal.h  nvm_undo_page.h  nvm_undo_ptr.h  nvm_undo_record.h  nvm_undo_rollback.h  nvm_undo_segment.h
nvmdb/core/GaussDBKernel-nvmdb/tests/: CMakeLists.txt  utest_main.cpp
nvmdb/core/GaussDBKernel-nvmdb/tests/unittest/: bitmap_test.cpp  codec_test.cpp  heap_test.cpp  index_test.cpp  pactree_test.cpp  rowid_cache_test.cpp  tablespace_test.cpp  test_declare.h  undo_test.cpp  vecstore_test.cpp
nvmdb/core/GaussDBKernel-nvmdb/third_parties/pactree/include/: arch.h  common.h  ordo_clock.h  pactree.h  pmem.h  pptr.h
nvmdb/core/GaussDBKernel-nvmdb/third_parties/pactree/lib/PDL-ART/: Epoche.h  Epoche.hpp  Key.h  N.h  N.hpp  N16.hpp  N256.hpp  N4.hpp  N48.hpp  Tree.cpp  Tree.h
nvmdb/core/GaussDBKernel-nvmdb/third_parties/pactree/src/: CMakeLists.txt  Combiner.h  Oplog.cpp  Oplog.h  SearchLayer.h  VersionedLock.h  WorkerThread.cpp  WorkerThread.h  bitset.h  lNode.cpp  lNode.h  linkedList.cpp  linkedList.h  pactree.cpp  pactreeImpl.h  pactreeTrx.h  pmem.cpp  threadData.h
nvmdb/core/GaussDBKernel-nvmdb/tools/: CMakeLists.txt  datahack.cpp
nvmdb/fdw_adapter/: CMakeLists.txt  Makefile  nvm_fdw--1.0.sql  nvm_fdw.control  nvm_fdw.cpp  nvm_fdw_internal.h  nvm_fdw_iter.cpp  nvm_fdw_iter.h
nvmdb/third_party_build/dependency/pmdk/: build.sh
nvmdb/third_party_build/dependency/tbb/: build.sh
